Landing-Page-Form

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <title>Multigram</title>
   </head>
   <body>
-    <h1>Landing Page</h1>
+    <main id="main-holder">
+     <h1 id="login-header">Instagram</h1> 
+     <div id="login-error-msg-holder">
+      <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+     </div>
 
-    <script src="script.js"></script>
+     <form id="login-form">
+      <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+      <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+      <input type="submit" value="Login" id="login-form-email">
+     </form>
+
+     <script src="script.js"></script>
+    </main>
   </body>
 </html>
