--- a/account.html
+++ b/account.html
@@ -6,10 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Multigram</title>
+
   </head>
   <body>
-    <h1>Account Page</h1>
-
+    
+ <nav class="navbar">
+        <h1 class="name">Instagram</h1>
+        <ul class="nav-links">
+            <button class ="nav-item">Follow</button>
+            <button class="nav-item">Message</button>
+        </ul>
+    </nav>
+    <h1 class=" Account">Account Page</h1>
+    <a href="https://Instagram.com" class="logo">
+      <img src="https://fastly.picsum.photos/id/461/200/200.jpg?hmac=OfKixfjCbSjC-h3P78PbMNsJqVCnAClKqNmrUCONSw4" alt="coding">
+      <img src="https://fastly.picsum.photos/id/461/200/200.jpg?hmac=OfKixfjCbSjC-h3P78PbMNsJqVCnAClKqNmrUCONSw4" alt="coding">
+      <img src="https://fastly.picsum.photos/id/461/200/200.jpg?hmac=OfKixfjCbSjC-h3P78PbMNsJqVCnAClKqNmrUCONSw4" alt="coding">
+      <img src="https://fastly.picsum.photos/id/461/200/200.jpg?hmac=OfKixfjCbSjC-h3P78PbMNsJqVCnAClKqNmrUCONSw4" alt="coding">
+      <img src="https://fastly.picsum.photos/id/461/200/200.jpg?hmac=OfKixfjCbSjC-h3P78PbMNsJqVCnAClKqNmrUCONSw4" alt="coding">
+      <img src="https://fastly.picsum.photos/id/461/200/200.jpg?hmac=OfKixfjCbSjC-h3P78PbMNsJqVCnAClKqNmrUCONSw4" alt="coding">
+    </a>
     <script src="script.js"></script>
   </body>
 </html>
